[package]
name = "planck-time-trials"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.1"
pollster = "0.3"
cgmath = "0.18"
bytemuck = { version = "1.16", features = [ "derive" ] }
rand = "0.9.2"
now = "0.1.3"
chrono = "0.4.42"
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
smallvec = "1.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
irc = "0.15"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
iced = { version = "0.14", default-features = false, features = ["wgpu", "debug", "tokio", "x11", "wayland"] }
iced_wgpu = "0.14"
iced_winit = "0.14"


[dependencies.image]
version = "0.24"
#default-features = false
features = ["png", "jpeg"]
